--- a/Public/styles/app.css
+++ b/Public/styles/app.css
@@ -1,111 +1,70 @@
-body, html {
-	height: 100%;
-}
-
 body {
 	font-family: sans-serif;
 }
 
-div.welcome {
+body, html {
 	height: 100%;
-	text-align: center;
 }
-
-div.welcome img {
-	position: relative;
-  	top: 50%;
-  	transform: translateY(-50%);
-	width: 300px;
-}
-
-
 h1{
-    font-size: 30px;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 300;
-    text-align: center;
-    margin-bottom: 15px;
+   font-size: 30px;
+   color: #fff;
+   text-transform: uppercase;
+   font-weight: 300;
+   text-align: center;
+   margin-bottom: 15px;
 }
-table{
-    width:100%;
-    table-layout: fixed;
-}
-.tbl-header{
-    background-color: rgba(255,255,255,0.3);
-}
-.tbl-content{
-/*    height:500px;*/
-    overflow-x:auto;
-    margin-top: 0px;
-    border: 1px solid rgba(255,255,255,0.3);
-}
-th{
-    padding: 20px 15px;
-    text-align: left;
-    font-weight: 500;
-    font-size: 12px;
-    color: #fff;
-    text-transform: uppercase;
-}
-td{
-    padding: 15px;
-    text-align: left;
-    vertical-align:middle;
-    font-weight: 300;
-    font-size: 12px;
-    color: #fff;
-    border-bottom: solid 1px rgba(255,255,255,0.1);
-}
-
-
-/* demo styles */
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
 body{
-    background: -webkit-linear-gradient(left, #25c481, #25b7c4);
-    background: linear-gradient(to right, #25c481, #25b7c4);
-    font-family: 'Roboto', sans-serif;
-}
-section{
-    margin: 50px;
+   background: -webkit-linear-gradient(left, #25c481, #25b7c4);
+   background: linear-gradient(to right, #25c481, #25b7c4);
+   font-family: 'Roboto', sans-serif;
 }
 
-
-/* follow me template */
-.made-with-love {
-    margin-top: 40px;
-    padding: 10px;
-    clear: left;
-    text-align: center;
-    font-size: 10px;
-    font-family: arial;
-    color: #fff;
-}
-.made-with-love i {
-    font-style: normal;
-    color: #F50057;
-    font-size: 14px;
-    position: relative;
-    top: 2px;
-}
 a {
-    color: #fff;
-    text-decoration: none;
+   color: #fff;
+   text-decoration: none;
 }
 a:hover {
-    text-decoration: underline;
+   text-decoration: underline;
+}
+
+section {
+	margin-left: 50px;
+	margin-right: 50px;
+}
+
+thead th {
+	background: none !important;
 }
 
 
-/* for custom scrollbar for webkit browser*/
+th, thead th.first{
+   padding: 20px 15px;
+   text-align: left;
+   font-weight: 500;
+   font-size: 14px;
+   color: #fff;
+   text-transform: uppercase;
+   min-width: 180px;
+   background: -webkit-linear-gradient(left, #25c481, #26C28E) !important;
+   background: linear-gradient(to right, #25c481, #26C28E) !important;
+   /* border-bottom: solid 1px rgba(255,255,255,0.1); */
+   border: solid 1px rgba(255,255,255,0.1);
+}
+td{
+   padding: 15px;
+   text-align: left;
+   vertical-align:middle;
+   font-weight: 300;
+   font-size: 12px;
+   color: #fff;
+   border: solid 1px rgba(255,255,255,0.1);
+}
+#parent {
+	/* height: 800px; */
+}
 
-::-webkit-scrollbar {
-    width: 6px;
-}
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-}
-::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+.fixTable {
+	width: 800px !important;
 }
