--- a/Public/styles/app.css
+++ b/Public/styles/app.css
@@ -35,9 +35,9 @@ section {
 }
 
 thead th {
+	text-align: center;
 	background: none !important;
 }
-
 
 th, thead th.first{
    padding: 20px 15px;
@@ -61,6 +61,18 @@ td{
    color: #fff;
    border: solid 1px rgba(255,255,255,0.1);
 }
+
+td.alpha, th.alpha {
+	padding: 0 15px;
+	color: rgba(255, 255, 255, 0.5) !important;
+	background: rgba(255, 255, 255, 0.1) !important;
+}
+
+td.alpha:hover{
+	color: rgba(255, 255, 255, 1) !important;
+	background: none !important;
+}
+
 #parent {
 	/* height: 800px; */
 }
