--- a/Public/styles/app.css
+++ b/Public/styles/app.css
@@ -62,9 +62,17 @@ td{
    border: solid 1px rgba(255,255,255,0.1);
 }
 
-td.alpha, th.alpha {
-	padding: 0 15px;
+th.alpha, td.alpha {
 	color: rgba(255, 255, 255, 0.5) !important;
+	padding: 2px 15px;
+}
+th.alpha {
+	background: -webkit-linear-gradient(left, #3FC990, #3FC899) !important;
+    background: linear-gradient(to right, #3FC990, #3FC899) !important;
+}
+
+
+td.alpha{
 	background: rgba(255, 255, 255, 0.1) !important;
 }
 
@@ -74,6 +82,7 @@ td.alpha:hover{
 }
 
 #parent {
+	border: solid 1px rgba(255,255,255,0.1);
 	/* height: 800px; */
 }
 
